Fix WhatsApp FAB on mobile

--- a/styles/whatsapp-fab.less
+++ b/styles/whatsapp-fab.less
@@ -3,6 +3,7 @@
   position: fixed;
   right: 20px;
   bottom: 20px;
+  z-index: 100;
   transition: transform .2s ease-in-out, filter .2s ease-in-out;
 
   &:hover {
